--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^4.11.0",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
